Bug 522864 - Unexpected system tray icons for Flatpak apps in X11 since Plasma 6.7
Summary: Unexpected system tray icons for Flatpak apps in X11 since Plasma 6.7
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Tray widget (other bugs)
Version First Reported In: 6.7.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression, X11-only
Depends on:
Blocks:
 
Reported: 2026-07-09 19:14 UTC by John Veness
Modified: 2026-07-10 10:37 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.7.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description John Veness 2026-07-09 19:14:01 UTC
DESCRIPTION
As requested by Nate in https://bugs.kde.org/show_bug.cgi?id=521540#c21 this is a new report for my particular issue.

Since installing 6.7.0 (currently now on 6.7.2), I am seeing new system tray icons for apps that never had them before and have no need for such an icon, such as Firefox, VSCodium, Ungoogled Chromium, and KDE's own ISO Image Writer. These are all apps that I have installed as Flatpaks. These new icons don't appear for non-Flatpak apps.

STEPS TO REPRODUCE
1. Login to an X11 session in Plasma 6.7
2. Install a Flatpak app, such as KDE's ISO Image Writer
3. Run the app
4. Look at the system tray

OBSERVED RESULT
An icon appears for the app that was not there in previous Plasma versions. Left-clicking on the icon will open a new instance of the app. Right-clicking on the icon shows a menu with just "Quit <appname>", e.g. "Quit ISO Image Writer".

EXPECTED RESULT
No such icon to appear.

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20260707
KDE Plasma Version: 6.7.2
KDE Frameworks Version: 6.27.0
Qt Version: 6.11.1
Kernel Version: 7.1.2-1-default (64-bit)
Graphics Platform: X11

ADDITIONAL INFORMATION
This seems to (mostly) only happen in X11, but Wayland isn't completely immune. In Wayland, the icons don't appear most of the time, but they do appear briefly when logging in while a session is being restored. Once the session is restored, the icons disappear. That is, the icons appear briefly in Wayland while the app is being started, but this is most noticeable during a session restore.

I am running openSUSE Tumbleweed, which does not have AppArmor installed (old versions of Tumbleweed did, but they change to SELinux in 2025 for new installs).

plasmoidviewer -a org.kde.plasma.systemtray also shows the unexpected icons. I get a coredump when I close plasmoidviewer, by the way, but maybe that should be tracked elsewhere.
Comment 1 David Redondo 2026-07-09 20:32:53 UTC
Uhm, I guess we dont implement the background portal on x11 ? Not sure how I could have overseen that

as a workaround disabling the background portal will disable the background monitor.

Copy the /usr/share/xdg-desktop-portal/kde-portals.conf to .config/xdg-desktop-portal/kde-portals.conf and add

org.freedesktop.impl.portal.Background=none

The complete file should look like

[preferred]
default=kde
org.freedesktop.impl.portal.Settings=kde;gtk;
org.freedesktop.impl.portal.Secret=kwallet
org.freedesktop.impl.portal.Notification=plasmanotify
org.freedesktop.impl.portal.Background=none
Comment 2 John Veness 2026-07-09 21:12:55 UTC
Thanks David, I can confirm your workaround does the trick, both for the long-living icons that appeared in X11, and the very briefly showing icons that appeared during a Wayland session restore. My system tray is now back to its less busy-looking pre-6.7 behaviour :)
Comment 3 Bug Janitor Service 2026-07-10 07:10:49 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/merge_requests/601
Comment 4 David Redondo 2026-07-10 10:37:33 UTC
Git commit 875e38d4121c8d4477d388e6f2d3e1965d5b826d by David Redondo.
Committed on 10/07/2026 at 09:39.
Pushed by davidre into branch 'Plasma/6.7'.

Disable background portal on X11

We have no impl on X11 and it causes x-d-p to think that noone
has windows.
FIXED-IN: 6.7.3

M  +5    -1    src/desktopportal.cpp

https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/commit/875e38d4121c8d4477d388e6f2d3e1965d5b826d