Disable background portal on X11

We have no impl on X11 and it causes x-d-p to think that noone
has windows.
BUG:522864
FIXED-IN: 6.7.3